--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>danishayman</title>
   </head>
   <body>
+    
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <p class="author-name">danishayman</p>
+
   </body>
 </html>
