--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,10 +7,8 @@
     <title>danishayman</title>
   </head>
   <body>
-    
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <p class="author-name">danishayman</p>
-
   </body>
 </html>
